# crul

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  README  test.c
Butterfly/: CMakeLists.txt  object.c  test
src/: CMakeLists.txt  crul.c  crul.h
